@@ -1,0 +1,2 @@
+# Additional include directories the compiler should search
+ADDITIONAL_INCLUDE_DIRS += -I../../
