@@ -1,0 +1,10 @@
+/* All Rights reserved */
+
+#include <AppKit/AppKit.h>
+#include <InterfaceBuilder/InterfaceBuilder.h>
+
+@interface SWKPalette : IBPalette
+{
+  IBOutlet NSImageView *image;
+}
+@end
